--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_PORT=3306
-DB_USER=root
-DB_PASSWORD=T1ml3s#P@ssw0rd
-DB_NAME=bri_agrobankcoresystem
+DB_HOST=172.19.133.222
+DB_PORT=1433
+DB_USER=usr_timles_dev
+DB_PASSWORD="T1ml3s#P@ssw0rd"
+DB_NAME=BRI_AGROBANKCORESYSTEM
